Added service test classes and replaced constructors with builder pattern